[gd_scene load_steps=2 format=3 uid="uid://c1nftongtxy1a"]

[ext_resource type="Script" path="res://DashTimer.gd" id="1"]

[node name="Dash" type="Node"]
script = ExtResource("1")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashAnimTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashAnimTimer" to="." method="_on_DashAnimTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
